responsive alignment issue fixed

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -254,6 +254,7 @@ a:hover {
 
 .home-content {
     text-align: left;
+    margin-bottom: 5em;
 }
 
 .home-title {
